--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -34,9 +34,17 @@
                     <i class="fas fa-search-plus"></i>
                 </a>
             </td>
+            <td>
+                <a class="btn btn-lg"
+                   asp-page="./Edit"
+                   asp-route-restaurantId="@restaurant.Id">
+                    <i class="fas fa-edit"></i>
+                </a>
+            </td>
         </tr>
     }
 </table>
 
+<a asp-page=".\Edit" class="btn btn-primary">Add New Restaurant</a>
 
 <div>@Model.Message</div>
